--- a/Frontend/src/app/view-consumable/view-consumable.component.html
+++ b/Frontend/src/app/view-consumable/view-consumable.component.html
@@ -54,34 +54,43 @@
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table">
 
                 <ng-container matColumnDef="Name">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600">Name
+                    </th>
                     <td mat-cell *matCellDef="let Consumable"> {{Consumable.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Description">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Description</th>
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600">
+                        Description</th>
                     <td mat-cell *matCellDef="let Consumable"> {{Consumable.description}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="On Hand">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">On Hand </th>
-                    <td mat-cell *matCellDef="let Consumable"> {{Consumable.on_Hand}} </td>
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;text-align: center;">On
+                        Hand </th>
+                    <td mat-cell *matCellDef="let Consumable" style="text-align: center;text-align: center;">
+                        {{Consumable.on_Hand}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Minimum Reorder Quantity">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Minimum Reorder Quantity
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;text-align: center;">
+                        Minimum Reorder Quantity
                     </th>
-                    <td mat-cell *matCellDef="let Consumable"> {{Consumable.minimum_Reorder_Quantity}} </td>
+                    <td mat-cell *matCellDef="let Consumable" style="text-align: center;">
+                        {{Consumable.minimum_Reorder_Quantity}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Maximum Reorder Quantity">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Maximum Reorder Quantity
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;text-align: center;">
+                        Maximum Reorder Quantity
                     </th>
-                    <td mat-cell *matCellDef="let Consumable"> {{Consumable.maximum_Reorder_Quantity}} </td>
+                    <td mat-cell *matCellDef="let Consumable" style="text-align: center;">
+                        {{Consumable.maximum_Reorder_Quantity}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Category">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Category</th>
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600">
+                        Category</th>
                     <td mat-cell *matCellDef="let Consumable"> {{Consumable.consumable_Category.name}} </td>
                 </ng-container>
 
