--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
@@ -18,7 +18,9 @@
      
       <div>
         <button (click)="GenerateApprovedReport()">Generate Approved Vendor</button>
-
+      </div>
+      <div>
+        <button (click)="GenerateBEESpendtReport()">Generate BEE Spent Report</button>
       </div>
 
     </mat-sidenav-content>
