Bug fixes - Budget, User, Employee, Admin, Procurement

--- a/Frontend/src/app/User/user-profile/user-profile.component.html
+++ b/Frontend/src/app/User/user-profile/user-profile.component.html
@@ -134,7 +134,7 @@
 
               <label style="margin-left: 3px; margin-right: 3px; margin-bottom:2px;"> Mandate Limit:</label>
               <br />
-              <label style="margin-left: 3px; margin-right: 3px;">{{ml.ammount}}</label>
+              <label style="margin-left: 3px; margin-right: 3px;">{{employee.mandate_Limit.ammount | currency:'ZAR':'symbol-narrow'}}</label>
 
             </td>
           </tr>
