--- a/Frontend/src/app/create-admin/create-admin.component.html
+++ b/Frontend/src/app/create-admin/create-admin.component.html
@@ -66,7 +66,7 @@
                   <label style=" color:black;">Phone Number:</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="text" placeholder="E.g. 082 123 4567" formControlName="CellPhone_Num"
+                    <input matInput type="text" placeholder="E.g. 0821234567" formControlName="CellPhone_Num"
                            id="CellPhone_Num" required>
                     <mat-error *ngIf="myError('CellPhone_Num', 'required')">Phone is required</mat-error>
                     <mat-error *ngIf="myError('CellPhone_Num', 'maxlength')">Limit exceed</mat-error>
