--- a/Frontend/src/app/create-budget-line/create-budget-line.component.html
+++ b/Frontend/src/app/create-budget-line/create-budget-line.component.html
@@ -62,7 +62,7 @@
                             </td>
                             <td>
                                 <mat-card-content>
-                                    <label style=" color:black;">Budgeted:</label>
+                                    <label style=" color:black;">Budgeted (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="budgetAmt"
@@ -82,7 +82,7 @@
                         <tr>
                             <td>
                                 <mat-card-content>
-                                    <label style=" color:black;">Actual:</label>
+                                    <label style=" color:black;">Actual (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="actualAmt"
