--- a/Frontend/src/app/upload-invoice/upload-invoice.component.css
+++ b/Frontend/src/app/upload-invoice/upload-invoice.component.css
@@ -1,7 +1,7 @@
-.wrapper {
-    position: relative;
+/*.wrapper {
+    position: relative;*/
     /*width: 100%;*/
-    height: 100%;
+    /*height: 100%;
 }
 
 .CloseButton {
@@ -93,4 +93,4 @@ button.is_active .success svg {
 button.is_active span {
     opacity: 0;
     visibility: hidden;
-}
+}*/
