--- a/Frontend/src/app/create-mandate-limit/create-mandate-limit.component.html
+++ b/Frontend/src/app/create-mandate-limit/create-mandate-limit.component.html
@@ -11,7 +11,7 @@
                         <tr>
                             <td style="width:100%;">
                                 <mat-card-content>
-                                    <label style=" color:black;">Amount:</label>
+                                    <label style=" color:black;">Amount (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="amount" id="amount"
