--- a/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
+++ b/Frontend/src/app/edit-budget-allocation/edit-budget-allocation.component.html
@@ -24,7 +24,7 @@
                             </td>
                             <td style="width:100%;">
                                 <mat-card-content>
-                                    <label style=" color:black;">Total:</label>
+                                    <label style=" color:black;">Total (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="total" id="total"
