--- a/Frontend/src/app/edit-budget-line/edit-budget-line.component.html
+++ b/Frontend/src/app/edit-budget-line/edit-budget-line.component.html
@@ -63,7 +63,7 @@
                             </td>
                             <td>
                                 <mat-card-content>
-                                    <label style=" color:black;">Budgeted:</label>
+                                    <label style=" color:black;">Budgeted (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="budgetAmt"
@@ -83,7 +83,7 @@
                         <tr>
                             <td>
                                 <mat-card-content>
-                                    <label style=" color:black;">Actual:</label>
+                                    <label style=" color:black;">Actual (R):</label>
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="actualAmt"
