--- a/Frontend/src/app/upload-payement-file/upload-payement-file.component.html
+++ b/Frontend/src/app/upload-payement-file/upload-payement-file.component.html
@@ -1,62 +1,65 @@
 <mat-tab-group (selectedTabChange)="onTabChange($event)">
     <mat-tab label="Upload Receipt">
-        <ng-template matTabContent>
-            <div style="margin: 10px;">
-                <form [formGroup]="myForm" (submit)="onSubmit()">
-                    <div>
-                        <h2>Upload a Receipt file</h2>
-                        <input type="file" id="FileAdded" placeholder="" formControlName="FileAdded"
-                            style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                            (change)="onFileUpload($event)" required>
-                    </div>
-                    <button class="" type="submit" [disabled]="!myForm.valid"
-                        matTooltip="Update stock levels counted for current stock on hand">
-                        <span>Upload Files</span>
-                        <div class="success">
-                            <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 29.756 29.756"
-                                style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
-                                <path
-                                    d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
-                            </svg>
-                        </div>
-                    </button>
-                    <button mat-raised-button type="button" (click)="Close()" class="CloseButton"
-                        style="margin-left: 5px; margin-top: 10px;">
-                        Close
-                    </button>
-                </form>
-
+      <ng-template matTabContent>
+        
+        <div style="display: flex; justify-content: center; align-items: center; margin: 10px;">
+          <form [formGroup]="myForm" (submit)="onSubmit()">
+            <div>
+              <h2 style="margin-left: 25px;">Upload a Receipt file</h2>
+              <input type="file" id="FileAdded" placeholder="" formControlName="FileAdded"
+                     style="border: solid #244688; border-radius: 5px; " accept=".pdf"
+                     (change)="onFileUpload($event)" required>
             </div>
-        </ng-template>
+
+            <div style="margin-top: 10px;">
+              <button mat-raised-button [disabled]="!myForm.valid"
+                      style="color: white; background-color: #94CC5B; margin-right: 20px; margin-left: 10px;">
+                Upload File
+              </button>
+              <button mat-raised-button type="button" (click)="Close()" style="color: white; background-color: #244688;">Cancel</button>
+            </div>
+
+            <!--<button class="" type="submit" [disabled]="!myForm.valid"
+              matTooltip="Update stock levels counted for current stock on hand">
+        <span>Upload Files</span>
+        <div class="success">
+          <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 29.756 29.756"
+               style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
+          <path d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
+                  </svg>
+        </div>
+      </button>
+      <button mat-raised-button type="button" (click)="Close()" class="CloseButton"
+              style="margin-left: 5px; margin-top: 10px;">
+        Close
+      </button>-->
+          </form>
+
+        </div>
+      </ng-template>
     </mat-tab>
     <mat-tab label="Upload Credit Card Payment">
-        <ng-template matTabContent>
-            <div style="margin: 10px;">
-                <form [formGroup]="myForm" (ngSubmit)="onFileUpload($event)">
-                    <div>
-                        <h2>Upload a Credit Card Payment file</h2>
-                        <input type="file" id="file" placeholder="" formControlName="FileAdded"
-                            style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                            (change)="onFileUpload($event)" required>
-                    </div>
-                    <button class="" type="submit" [disabled]="!myForm.valid"
-                        matTooltip="Update stock levels counted for current stock on hand">
-                        <span>Upload File</span>
-                        <div class="success">
-                            <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 29.756 29.756"
-                                style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
-                                <path
-                                    d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
-                            </svg>
-                        </div>
-                    </button>
-                    <button mat-raised-button type="button" (click)="Close()" class="CloseButton"
-                        style="margin-left: 5px; margin-top: 10px;">
-                        Close
-                    </button>
-                </form>
+      <ng-template matTabContent>
+        <h2 style="margin-left: 50px; margin-top: 10px;">Upload a Credit Card Payment file</h2>
+        <div style="display: flex; justify-content: center; align-items: center; margin: 10px;">
+          <form [formGroup]="myForm" (ngSubmit)="onFileUpload($event)">
+            <div>
 
+              <input type="file" id="file" placeholder="" formControlName="FileAdded"
+                     style="border: solid #244688; border-radius: 5px; align-items: center;" accept=".pdf"
+                     (change)="onFileUpload($event)" required>
             </div>
-        </ng-template>
+
+            <div style="margin-top: 10px;">
+              <button mat-raised-button [disabled]="!myForm.valid"
+                      style="color: white; background-color: #94CC5B; margin-right: 20px; margin-left:10px;">
+                Upload File
+              </button>
+              <button mat-raised-button type="button" (click)="Close()" style="color: white; background-color: #244688;">Cancel</button>
+            </div>
+          </form>
+
+        </div>
+      </ng-template>
     </mat-tab>
 </mat-tab-group>
