--- a/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
+++ b/Frontend/src/app/view-budget-allocation/view-budget-allocation.component.html
@@ -54,7 +54,7 @@
                 </ng-container>
                 <ng-container matColumnDef="total">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Total </th>
-                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.total}}</td>
+                    <td mat-cell *matCellDef="let BudgetAllocations">{{BudgetAllocations.total | currency:'ZAR':'symbol-narrow'}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="lines">
@@ -63,7 +63,7 @@
                         <button mat-raised-button
                             matTooltip="This will take you to the view budegt lines page where you can create edit or delete budget lines for this specific Budget Allocation"
                             routerLink="/ViewBudgetLines/{{BudgetAllocations.budget_ID}}"
-                            style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%;background-color: #94CC5B;"
+                            style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 135px; margin-top: 0.5%; background-color: #94CC5B;"
                             type="button">Budget Lines</button>
                     </td>
                 </ng-container>
