--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -29,20 +29,25 @@
   <mat-sidenav-content class="Main-content">
     <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
       Manage Employees
+      <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="help" style="font-size:30pt; height: 37px; width: 37px;"></mat-icon>
     </h1>
+
+
 
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
 
-      <button mat-raised-button 
-        style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-        routerLink="/AddEmployee">
+      <button mat-raised-button
+              style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+              routerLink="/AddEmployee">
         Create Employee
       </button>
+
+      
 
       <span style="flex: 1 1 auto;"></span>
 
       <mat-form-field appearance="fill"
-        style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
+                      style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
         <mat-label>Search by Name</mat-label>
         <input matInput (keyup)="search()" [(ngModel)]="searchWord" />
         <mat-icon matSuffix>search</mat-icon>
@@ -101,7 +106,7 @@
 
         <ng-container matColumnDef="mandate limit">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Mandate Limit </th>
-          <td mat-cell *matCellDef="let Employees"> R {{Employees.mandate_Limit.ammount}} </td>
+          <td mat-cell *matCellDef="let Employees">{{Employees.mandate_Limit.ammount | currency:'ZAR':'symbol-narrow'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
