--- a/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
+++ b/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
@@ -53,7 +53,7 @@
                 
                 <ng-container matColumnDef="amount">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Amount </th>
-                    <td mat-cell *matCellDef="let MandateLimits">{{MandateLimits.ammount}}</td>
+                    <td mat-cell *matCellDef="let MandateLimits">{{MandateLimits.ammount | currency:'ZAR':'symbol-narrow'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Date </th>
