--- a/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
+++ b/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
@@ -78,22 +78,22 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Upload Proof of Payment
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
-                        <button (click)="openDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
-                            class="noselect" type="button"
+                        <button mat-raised-button (click)="openDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
+                            type="button"
                             style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: #94CC5B;">
-                            <span class='text'>Proof of Payment</span>
+                            Proof of Payment
                         </button>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Inv">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Upload Invoice
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600; width:133px">Upload Invoice
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
-                        <button (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
-                            class="noselect" type="button"
-                            style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: #94CC5B;">
-                            <span class='text'>Invoice</span>
+                        <button mat-raised-button (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
+                            type="button"
+                            style="margin-right: 5%; display: flex; align-items: center; font-weight: bold; width: 133px; margin-top: 0.5%; background-color: #94CC5B;">
+                            Invoice
                         </button>
                     </td>
                 </ng-container>
@@ -101,7 +101,7 @@
                 <ng-container matColumnDef="View">
 
                     <th mat-header-cell *matHeaderCellDef></th>
-                    <td *matCellDef="let procurement" style="width:100px;">
+                    <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button *ngIf="!getFlagged(procurement.procurement_Status.name) " class="noselect" type="button"
                             style="background-color: #94CC5B;"
