--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -64,11 +64,10 @@
         <input matInput type="email" placeholder="johndoe@gmail.com" formControlName="Email" [(ngModel)]="Email">
         <!--formControlName="EmailUsername" id="Name" required [(ngModel)]="Email"-->
         <mat-hint align="end">
-          Please enter a valid email to reset your
-          password
+          Please enter a valid email to reset your password
         </mat-hint>
       </mat-form-field>
-
+      &nbsp;
       <button type="submit">Reset Password</button>
       &nbsp;
       <div class="d-flex justify-content-center">
