--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.css
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.css
@@ -1,50 +1,29 @@
 
   
   .content {
-    /* background-color: lightgrey;
-    height: calc(100vh - 98px);
-    
-    border-left: solid black 2px; */
+    margin-top: 20px;
     position:center;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px,solid,black;
   }
   
-  .sidenav-container{
-    border-left:solid;
-    border-right:solid;
-  }
-  
-  table {
-    width: 100%;
-  }
-  
-  .uni-font {
-    font-size: 16pt;
-  }
+ 
+.row {
+  margin-bottom: 15px;
+}
 
-  .example-container {
-    position: absolute;
-    top: 63px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #eee;
-    border-top:2px solid;
-  }
-  
-  
-  
-  tr.example-detail-row {
-  height: 0;
-  }
-  
-  tr.example-element-row:not(.example-expanded-row):hover {
-  background: whitesmoke;
-  }
-  
-  tr.example-element-row:not(.example-expanded-row):active {
-  background: #efefef;
-  }
-  
-  .example-element-row td {
-  border-bottom-width: 0;
-  }
+.col-6 {
+  margin-left: 1%;
+  align-self: center;
+}
+
+.col {
+  text-align: -webkit-center;
+}
+
+label {
+  font-weight: bold;
+}
