--- a/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
+++ b/Frontend/src/app/Reports/reports-main-view/reports-main-view.component.html
@@ -1,27 +1,65 @@
-<mat-sidenav-container class="example-container" style="padding: 0px;">
-    <mat-sidenav mode="side" opened class="sidenav-container">
-      <mat-nav-list>
-      <div mat-list-item style="display: flex; align-items: center;">
-        <mat-icon aria-hidden="false" style="width:30px; height: 44px; margin-left: 5%;">add_business</mat-icon>
-        <h2 class="uni-font">Vendor</h2>
-      </div>
-      <a mat-list-item class="uni-font" routerLink="/request-view">Onboard Request</a>
-      <a mat-list-item class="uni-font" routerLink="/vendor-unofficial-vendorlist">Approve Vendor</a>
-      <a mat-list-item class="uni-font"  routerLink="/vendor-view">Manage Vendor</a>
-    </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content class="content">
-      
-      <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-        Reports
-      </h1>
-     
-      <div>
-        <button (click)="GenerateApprovedReport()">Generate Approved Vendor</button>
-      </div>
-      <div>
-        <button (click)="GenerateBEESpendtReport()">Generate BEE Spent Report</button>
-      </div>
 
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+
+
+    <div class="content">
+      <div style="border: #244688 solid 1px;background-color: #ffffff;">
+      <div style="width: 750px;margin-bottom: 1%;">
+        <h1 style="margin-bottom: 0px;color: #ffffff; font-weight:700; font-size:32pt;background-color: #244688;border: #244688 solid 10px;border-bottom: #244688 solid 20px;text-align: center;">
+          Reports
+        </h1>
+      </div>
+      <div style="width: 750px;">
+        <div class="row">
+          <div class="col-6">
+            <label >Generate Approved Vendor List Report:</label>
+          </div>
+          <div class="col">
+              <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="GenerateApprovedReport()">Generate?</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label >Generate BEE Spent Report:</label>
+          </div>
+          <div class="col">
+            <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="ViewFilter(2)">Generate?</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label >Generate Vendor Spent Report:</label>
+          </div>
+          <div class="col">
+            <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="GenerateVendorSpentReport()">Generate?</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label >Generate Consumable Inventory management report:</label>
+          </div>
+          <div class="col">
+            <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="GenerateVendorSpentReport()">Generate?</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label >Generate Business Unit allocation Report:</label>
+          </div>
+          <div class="col">
+            <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="GenerateVendorSpentReport()">Generate?</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label >Generate Budget Variance Report:</label>
+          </div>
+          <div class="col">
+            <button mat-raised-button style="margin:1%; display: flex; align-items: center; font-size: 16px; width: 110px;background-color: #94CC5B;" (click)="GenerateVendorSpentReport()">Generate?</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <canvas id="bar" hidden="true"></canvas>
+      <canvas id="pie" hidden="true"></canvas>
+
