--- a/Frontend/src/app/home-page/home-page.component.html
+++ b/Frontend/src/app/home-page/home-page.component.html
@@ -23,14 +23,14 @@
             </mat-card-content>
           </mat-card>
       
-          <mat-card class="example-card" style="border-radius: 25px 25px 25px 25px; text-align: center; ">
+          <mat-card class="example-card" style="border-radius: 25px 25px 25px 25px; text-align: center; " routerLink="/ViewProcurementRequest">
             <img mat-card-image src="./assets/Images/procurement-menu-item.jpg" width="412" height="251">
             <mat-card-content style="background-color: #244688; color: white; border-radius: 0px 0px 25px 25px;">
               <h3 style="margin-top: 3%; font-size: 18pt;">Procurement</h3>
             </mat-card-content>
           </mat-card>
         
-          <mat-card class="example-card" style="border-radius: 25px 25px 25px 25px; text-align: center; ">
+          <mat-card class="example-card" style="border-radius: 25px 25px 25px 25px; text-align: center; " routerLink="/ViewBudgetAllocation">
             <img mat-card-image src="./assets/Images/finance-menu-item.jpg" width="412" height="251">
             <mat-card-content style="background-color: #244688; color: white; border-radius: 0px 0px 25px 25px;">
               <h3 style="margin-top: 3%; font-size: 18pt;">Finance</h3>
@@ -41,13 +41,6 @@
             <img mat-card-image src="./assets/Images/vendor-menu-item.jpg" width="412" height="251">
             <mat-card-content style="background-color: #244688; color: white; border-radius: 0px 0px 25px 25px;">
               <h3 style="margin-top: 3%; font-size: 18pt;">Vendor</h3>
-            </mat-card-content>
-          </mat-card>
-        
-          <mat-card class="example-card" style="border-radius: 25px 25px 25px 25px; text-align: center; ">
-            <img mat-card-image src="./assets/Images/calendar-menu-item.jpg" width="412" height="251">
-            <mat-card-content style="background-color: #244688; color: white; border-radius: 0px 0px 25px 25px;">
-              <h3 style="margin-top: 3%; font-size: 18pt;">Calendar</h3>
             </mat-card-content>
           </mat-card>
         
